--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@prisma/client": "5.7.0",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
@@ -28,7 +29,12 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.0.4",
 		"postcss": "^8",
+		"prisma": "5.7.0",
 		"tailwindcss": "^3.3.0",
+		"ts-node": "^10.9.2",
 		"typescript": "^5"
+	},
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
 	}
 }
