--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"clsx": "^2.0.0",
 		"lucide-react": "^0.294.0",
 		"next": "14.0.4",
+		"openai": "^4.24.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.49.2",
