--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "npx prisma generate && next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"postinstall": "npx prisma generate"
 	},
 	"dependencies": {
 		"@prisma/client": "5.7.0",
@@ -38,7 +39,6 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.0.4",
 		"postcss": "^8",
-		"prisma": "5.7.0",
 		"tailwindcss": "^3.3.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5"
