--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"lucide-react": "^0.294.0",
 		"next": "14.0.4",
 		"openai": "^4.24.0",
+		"prisma": "^5.7.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.49.2",
